# 3pcxp_evals_portal

./: .gitignore  AZURE_MANUAL_CONFIG.md  CHECKLIST.md  DEPLOYMENT.md  IMPLEMENTATION.md  MIGRATION_UV.md  PHASE2_INTEGRATION.md  PHASE2_SETUP_COMPLETE.md  PRD.md  PROJECT_MAP.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP.md  TESTING.md  demo-data.js  docker-compose.yml  index.html  start.bat
.github/: copilot-instructions.md
.github/workflows/: azure-deploy.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start-dev.bat  start-prod.bat
backend/app/: config.py  main.py
backend/app/api/: __init__.py  auth.py  config.py  health.py  requests.py
backend/app/models/: __init__.py  request.py  user.py
backend/app/services/: __init__.py  auth_service.py  request_service.py
backend/app/storage/: __init__.py  json_storage.py  session_storage.py
backend/app/utils/: __init__.py  logger.py
backend/data/: index.json
backend/data/backups/2025-11-21/: req_1763671219_6c615d.json  req_1763678262_23421f.json
backend/data/requests/: req_1763671219_6c615d.json  req_1763671983_316213.json  req_1763678262_23421f.json
backend/tests/: conftest.py  test_models.py
backend/tests/test_api/: __init__.py  test_requests.py
css/: dashboard.css  main.css  modal.css
frontend/: index.html
frontend/css/: dashboard.css  form.css  main.css
frontend/js/: api.js  app.js  dashboard.js  form.js  modal.js  state.js  utils.js
js/: app.js  dashboard.js  form.js  modal.js  state.js
